# airflow-log-rca-ml

./: .env.example  .gitignore  README.md
data/: README.md
data/1_synthetic_airflow/: README.md
mini-project/: README.md  generate_logs.py  phase1_clustering.py  phase1_hadoop.py  phase1_hdfs.py  phase2_anomaly.py  phase3_classify.py  phase4_llm_rca.py  requirements.txt
mini-project/datasets/: 1_synthetic.py  2_loghub_hadoop.py  3_loghub_hdfs.py
production-shaped/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
production-shaped/airflow_dags/: generate_logs_dag.py  rca_pipeline_dag.py
production-shaped/config/: settings.yaml
production-shaped/scripts/: run_local.sh
production-shaped/src/log_rca/: __init__.py  config.py
production-shaped/src/log_rca/datagen/: __init__.py  cli.py  dag_catalogue.py  failure_modes.py  log_format.py  simulator.py  writer.py
production-shaped/src/log_rca/datasets/: __init__.py  loghub_hadoop.py  synthetic_airflow.py
production-shaped/src/log_rca/ml/: __init__.py  anomaly.py  classification.py  clustering.py  discrimination.py  llm_rca.py
production-shaped/src/log_rca/pipeline/: __init__.py  phase1.py  phase1_loghub.py  phase2.py  phase3.py  phase4.py
production-shaped/src/log_rca/reports/: __init__.py  phase1.py  phase1_loghub.py  phase2.py  phase3.py  phase4.py
production-shaped/src/log_rca/storage/: __init__.py  base.py  local.py
production-shaped/tests/: conftest.py
production-shaped/tests/integration/: test_cli.py  test_pipeline_phase1.py  test_pipeline_phase1_loghub.py  test_pipeline_phase2.py  test_pipeline_phase3.py  test_pipeline_phase4.py
production-shaped/tests/unit/: test_config.py  test_dataset_loghub_hadoop.py  test_dataset_synthetic_airflow.py  test_failure_modes.py  test_log_format.py  test_ml_anomaly.py  test_ml_classification.py  test_ml_clustering.py  test_ml_discrimination.py  test_ml_llm_rca.py  test_reports_phase1.py  test_reports_phase1_loghub.py  test_reports_phase2.py  test_reports_phase3.py  test_simulator.py  test_storage_local.py
