[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-rca"
version = "0.1.0"
description = "ML-based root-cause analysis for Airflow DAG failures (mimic of a large-bank GCP setup)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "airflow-log-rca-ml" }]

# Always-on runtime deps (Phase 0 + base)
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
# Phase 0: synthetic data generator
datagen = ["faker>=25,<32"]

# Phases 1-3: log mining + classical ML
ml = [
    "drain3>=0.9.11,<1.0",
    "pandas>=2.2,<3",
    "scipy>=1.13,<2",
    "scikit-learn>=1.5,<2",
    "joblib>=1.4,<2",
    "rich>=13,<14",
]

# Phase 4: LLM-based RCA
llm = [
    "anthropic>=0.40,<1",
    "python-dotenv>=1.0,<2",
]

# Airflow orchestration (heavy install -- only when running the real DAGs)
airflow = ["apache-airflow>=2.10,<3"]

# Dev tooling
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-mock>=3,<4",
    "ruff>=0.5,<1",
]

# Convenience: install everything for local dev
all = [
    "log-rca[datagen,ml,llm,dev]",
]

[project.scripts]
log-rca-gen = "log_rca.datagen.cli:main"
log-rca-phase1 = "log_rca.pipeline.phase1:main"
log-rca-phase1-hadoop = "log_rca.pipeline.phase1_loghub:main"
log-rca-phase2 = "log_rca.pipeline.phase2:main"
log-rca-phase3 = "log_rca.pipeline.phase3:main"
log-rca-phase4 = "log_rca.pipeline.phase4:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
log_rca = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/log_rca"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # long lines fine in log templates
